Fixed result field so text wraps when larger passwords are generated

--- a/style.css
+++ b/style.css
@@ -190,4 +190,8 @@ main{
         font-size: 40px;
         height: 40px;
     }
+    .result{
+       text-wrap: wrap;
+        padding: 2rem 3rem;
+    }
 }
